<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/post"
    android:orientation="vertical"
    android:layout_margin="@dimen/root_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subredditName"
            android:text="@string/subreddit"
            android:textSize="@dimen/generic_textSize"
            android:textColor="@color/_757575"
            android:layout_margin="@dimen/little_generic_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dot"
            android:text="@string/circle"
            android:textSize="@dimen/generic_textSize"
            android:textColor="@color/_757575"
            android:textStyle="bold"
            android:layout_margin="@dimen/little_generic_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timestamp"
            android:text="@string/timestamp"
            android:textSize="@dimen/generic_textSize"
            android:textColor="@color/_757575"
            android:layout_margin="@dimen/little_generic_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dot2"
            android:text="@string/circle"
            android:textSize="@dimen/generic_textSize"
            android:textColor="@color/_757575"
            android:textStyle="bold"
            android:layout_margin="@dimen/little_generic_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/source"
            android:text="@string/source"
            android:textSize="@dimen/generic_textSize"
            android:textColor="@color/_757575"
            android:layout_margin="@dimen/little_generic_margin" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/subreddit"
            android:layout_width="@dimen/generic_width_height"
            android:layout_height="@dimen/generic_width_height"
            android:id="@+id/postImage"
            android:background="@drawable/lorem_ispum"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/little_generic_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/postTitle"
            android:text="@string/postTitle"
            android:textSize="@dimen/postTitle_TextView"
            android:textColor="@color/_BDBDBD"
            android:layout_toStartOf="@id/postImage"
            android:layout_margin="@dimen/little_generic_margin" />

    </RelativeLayout>

</LinearLayout>